root/multicluster-monitoring-operator/manifests/base/grafana/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.open-cluster-management.io/rewrite-target: /
    kubernetes.io/ingress.class: ingress-open-cluster-management
  name: grafana
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3001
        path: /grafana
